--- a/zig_bm25/src/style.css
+++ b/zig_bm25/src/style.css
@@ -119,11 +119,12 @@ a {
 
 #alt-view {
     background: #bfbfbf;
-    width: 65%;
+    width: 100%;
     height: 100%;
     position: absolute;
     top: 0;
-    left: 35%;
+    /* left: 35%; */
+    left: 0%;
     z-index: 500;
     margin-left: auto;
     margin-right: auto;
@@ -137,8 +138,8 @@ a {
 }
 
 #myGrid {
-	width: 900px;
-	height: 700px;
+	width: 1200px;
+	height: 900px;
 	margin-left: auto;
 	margin-right: auto;
 }
